# codejam-2022

./: .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  pyproject.toml  tox.ini
.github/: codecov.yml
.github/workflows/: coverage.yml  tests.yml
front-end/: index.html
front-end/src/css/: README.md  main.css  main.css.map
front-end/src/js/: index.js
front-end/src/scss/: main.scss
src/goblingame/: server.py
src/goblingame/data/: __init__.py  core.html  index.html
src/goblingame/data/front-end/: index.html
src/goblingame/data/front-end/src/css/: README.md
src/goblingame/data/front-end/src/js/: index.js
src/goblingame/game/: engine.py  player.py  room.py
tests/: test_meta.py
