[tool.poetry]
name = "goblingame"
version = "0.1.0"
description = ""

authors = [
    "ionite34 <dev@ionite.io>",
    "eniraa <accounts@eji.moe>",
    "smile <smailbestybay@gmail.com>",
    "apolloiheo <apolloiheo@berkeley.edu>",
]

license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
pyrebase = "^3.0.27"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "~4.0.1"
flake8-docstrings = "~1.6.0"
isort = "~5.10.1"
pre-commit = "~2.20.0"
black = "^23.1.0"

[tool.poetry.scripts]
start = "goblingame.server:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
